...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:texte="application pizza">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textMeetingtitleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
...
            tools:texte="réunion de suivi des avancesments de l'application pizza
        présentation carte
        précommandes
        suivi des règlement par carte bancaire">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textMeetingCommentEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/dateMeeting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="9dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_edit_calendar_24"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@id/dateMeeting"
            app:layout_constraintTop_toTopOf="@id/dateMeeting"
            tools:text="14/03/2022" />

        <ImageButton
            android:id="@+id/hourStartMeeting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toEndOf="@id/dateText"
...
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="@+id/hourStartText"
            app:layout_constraintTop_toBottomOf="@+id/hourStartText"
            tools:text="" />

        <ImageButton
            android:id="@+id/durationMeeting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="9dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_timer_24"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@id/hourEndMeeting"
            app:layout_constraintTop_toTopOf="@id/hourEndMeeting"
            tools:text="11h15" />

        <ImageButton
            android:id="@+id/participantMeeting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="9dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_group_24"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="@+id/participantMeeting"
            app:layout_constraintTop_toBottomOf="@+id/participantMeeting"
            tools:texte="Mathieu DUPONT   , Development      , Developer front end      , mathieu.dupont@pme.fr" />

        <ImageButton
            android:id="@+id/roomMeeting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="168dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_meeting_room_blue_24"
...
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="@+id/roomMeeting"
            app:layout_constraintTop_toBottomOf="@+id/roomMeeting"
            tools:text="" />

        <Button
            android:id="@+id/meeting_set"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="Save Meeting"
            app:layout_constraintTop_toBottomOf="@+id/roomMeeting" />

...
