...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meeting.SelectcoworkerActivity">

     <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewcow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:listitem="@layout/item_select_coworker" />

     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_coworker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginEnd="64dp"
         android:clickable="true"
         app:backgroundTint="@color/colorblue"
...
