<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

         <Spinner
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"  />

    <Button
        android:id="@+id/room_set"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:text="Set"
        android:layout_height="0dp" />

    </LinearLayout>
